# lisp-snakes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
core/: Cargo.toml
core/src/: lib.rs  lisp.rs  sim.rs
src/: lisp.rs  main.rs  main.rs.bak
terminal/: Cargo.toml
terminal/src/: main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
