[package]
name = "lisp-snakes-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lisp-snakes-core = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window", "Performance",
    "KeyboardEvent", "Storage",
] }
js-sys = "0.3"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
